@@ -1,3 +1,8 @@
+2019-04-20  Sam Varshavchik  <mrsam@courier-mta.com>
+
+	* main_window_handler.C: fix handling of edge case when an error
+	creates a main window with no size.
+
 0.21
 
 2019-04-09  Sam Varshavchik  <mrsam@courier-mta.com>
